Getting products from JSON by AJAX query from JSON server

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <!-- Constants and Utils -->
   <script src="constants/root.js"></script>
-  <script src="constants/catalog.js"></script>
+  <!-- <script src="constants/catalog.js"></script> -->
   <script src="utils/localStorageUtil.js"></script>
 
   <!-- Header component -->
@@ -32,5 +32,8 @@
   <!-- Cart component -->
   <script src="components/Cart/Cart.js"></script>
   <link rel="stylesheet" href="components/Cart/Cart.css">
+
+  <!-- Start point -->
+  <script src="index.js"></script>
 </body>
 </html>
