--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
   <div id="cart"></div>
 
+  <div id="spinner"></div>
+
   <!-- Constants and Utils -->
   <script src="constants/root.js"></script>
   <!-- <script src="constants/catalog.js"></script> -->
@@ -32,6 +34,10 @@
   <!-- Cart component -->
   <script src="components/Cart/Cart.js"></script>
   <link rel="stylesheet" href="components/Cart/Cart.css">
+
+  <!-- Spinner component -->
+  <script src="components/Spinner/spinner.js"></script>
+  <link rel="stylesheet" href="components/Spinner/spinner.css">
 
   <!-- Start point -->
   <script src="index.js"></script>
