Added an error message if database not in access

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <div id="cart"></div>
 
   <div id="spinner"></div>
+  
+  <div id="error"></div>
 
   <!-- Constants and Utils -->
   <script src="constants/root.js"></script>
@@ -36,10 +38,14 @@
   <link rel="stylesheet" href="components/Cart/Cart.css">
 
   <!-- Spinner component -->
-  <script src="components/Spinner/spinner.js"></script>
-  <link rel="stylesheet" href="components/Spinner/spinner.css">
+  <script src="components/Spinner/Spinner.js"></script>
+  <link rel="stylesheet" href="components/Spinner/Spinner.css">
 
-  <!-- Start point -->
+  <!-- Error component -->
+  <script src="components/Error/Error.js"></script>
+  <link rel="stylesheet" href="components/Error/Error.css">
+
+  <!-- Entry point -->
   <script src="index.js"></script>
 </body>
 </html>
